[PF-1538] jdk17 (#644)
* WIP - need the new gradle version

* Java17 build works for me

* provide distribution to setup-java

* A possible way to work around the issue with the openapi generated client, JDK 17 and PATCH endpoints (#637)

* A possible way to work around the issue with the openapi generated client, JDK 17 and PATCH endpoints. This uses a different connection provider which supports PATCH endpoints without need for reflection. However, it does require modifying client code. It should be possible to do this at openapi code generation time as well by providing custom templates.

* Remove unused import

* spotless

* static analysis step requires JDK 17

* Add exception to logging

* Try in gha test env

* Update codegen to use the JdkConnector; remove from integration

Co-authored-by: bumptagbot <robot@terra.team>
Co-authored-by: Phil Shapiro <pshapiro@broadinstitute.org>